--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "yiier/yii2-return-url",
     "description": "Keeps current URL in session for login actions so we can return to it if needed.",
     "type": "yii2-extension",
-    "keywords": ["yii2","filter","ReturnUrl",""],
+    "keywords": ["yii2","filter","ReturnUrl"],
     "license": "BSD-3-Clause",
     "authors": [
         {
